Cartool pages: - Moved the main page styles from Reference Guide to main CSS. - Applied same formatting to the main index.html page. Also updated copyright notice. - requirements.html: Google Forms was not showing properly, added some code to force auto-size page. Fixed quotation style.

--- a/docs/cartool.css
+++ b/docs/cartool.css
@@ -316,6 +316,20 @@ pre, .mvd-pre {
 	}
 
 
+blockquote {
+	font-family: "Courier New",Courier,monospace;
+	font-size: 10pt;
+    color: #333333;
+	background-color:#F5F5F5;
+
+    margin: 12px 32px;
+    padding: 8px 16px;
+
+    border: 1px solid #CCCCCC; 		/* Add a border for better delineation */
+    border-radius: 4px; 			/* Slight rounding for modern aesthetics */
+	}
+
+
 listing, .mvd-listing {
 	font-family : "Courier New",Courier,monospace;
 	font-size : 10pt;
@@ -427,5 +441,56 @@ iframe {
     overflow: hidden;  	/* Prevents any internal scrollbars */
 
     margin: -30;		/* Hack to eat back the margin */
+}
+
+
+/*-------------------- Main page 2 columns --------------------*/
+
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px 20px;
+    padding: 20px;
+}
+
+.main-section {
+    background: #F8FAFF;
+    padding: 5px 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.main-section H3 {
+    color: #1155E0;
+    margin-bottom: 10px;
+}
+
+.main-section ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.main-section ul li {
+    margin-bottom: 6px;
+/*    white-space: nowrap;*/
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.3;
+}
+
+.main-section ul li a {
+    color: #333;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.main-section ul li a:hover {
+    color: #1155E0;
+    text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .main-grid {
+        grid-template-columns: 1fr;
 }
 
